--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html>
 <html>
   <head>
@@ -37,7 +35,7 @@
 
         text-align: right;
         padding-top: 11em;
-        background-color: blue;
+        background-color: red;
 
       }
       .textColumn p {
